k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-gateway
  namespace: gateway
spec:
  selector:
    app: svc-gateway
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
